--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,38 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <base href=".">
+    <base href="/">
     <title>Geospatial Data Processor and Visualizer</title>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
+    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css" type="text/css">
+
+    <!-- Optional theme -->
+    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap-theme.min.css">
+      <link rel="stylesheet" href="node_modules/openlayers/dist/ol.css">
+      <link href="public/css/styles.css" rel="stylesheet" />
+
+      <!-- Latest compiled and minified JavaScript -->
+   <script src="node_modules/core-js/client/shim.min.js"></script>
+
+
+    <script src="node_modules/zone.js/dist/zone.js"></script>
+    <script src="node_modules/reflect-metadata/Reflect.js"></script>
+    <script src="node_modules/systemjs/dist/system.src.js"></script>
+    <script src="node_modules/openlayers/dist/ol.js"></script>
+   <!--   <script src="node_modules/ng2-bootstrap/bundles/ng2-bootstrap.min.js"></script>-->
+
+    <script src="systemjs.config.js"></script>
+    <script>
+        System.import('app').catch(function(err){ console.error(err); });
+    </script>
   </head>
   <body>
-    <my-app>Loading...</my-app>
+        <my-app>Loading...</my-app>
+  <!--  <script src="node_modules/jquery/dist/jquery.min.js"></script>
+    <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>-->
   </body>
 </html>
