fixed issues with gui

--- a/src/index.html
+++ b/src/index.html
@@ -34,7 +34,7 @@
         </script>
     </head>
     <!-- 3. Display the application -->
-    <body>
+    <body style="overflow: hidden">
         <my-app>Loading...</my-app>
     </body>
 </html>
