--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,6 @@
         <title>Geospatial Data Processor and Visualizer</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="public/css/styles.css">
 
         <!-- 1. Load libraries -->
         <link rel="stylesheet" href="http://openlayers.org/en/v3.17.1/css/ol.css" type="text/css">
@@ -18,7 +17,7 @@
         <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
         <!-- <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/hammer.js/2.0.6/hammer.js"></script> -->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.5/js/materialize.min.js"></script>
-
+        <link rel="stylesheet" href="public/css/styles.css">
         <!-- Polyfill(s) for older browsers -->
         <script src="node_modules/core-js/client/shim.min.js"></script>
         <script src="node_modules/zone.js/dist/zone.js"></script>
@@ -34,7 +33,7 @@
         </script>
     </head>
     <!-- 3. Display the application -->
-    <body style="overflow: hidden">
+    <body>
         <my-app>Loading...</my-app>
     </body>
 </html>
