--- a/src/index.html
+++ b/src/index.html
@@ -1,4 +1,4 @@
-<html>
+<html style="height: 100%">
     <head>
         <base href="/">
         <title>Geospatial Data Processor and Visualizer</title>
@@ -23,6 +23,7 @@
         <script src="node_modules/zone.js/dist/zone.js"></script>
         <script src="node_modules/reflect-metadata/Reflect.js"></script>
         <script src="node_modules/systemjs/dist/system.src.js"></script>
+        <script src="node_modules/devbridge-autocomplete/dist/jquery.autocomplete.min.js"></script>
         <script src="http://openlayers.org/en/v3.12.1/build/ol.js"></script>
 
         <!-- 2. Configure SystemJS -->
@@ -33,7 +34,7 @@
         </script>
     </head>
     <!-- 3. Display the application -->
-    <body>
+    <body style="overflow: auto; height: 100%">
         <my-app>Loading...</my-app>
     </body>
 </html>
