--- a/src/index.html
+++ b/src/index.html
@@ -29,6 +29,11 @@
     </head>
 
     <body>
-        <my-app>Loading...</my-app>
+        <my-app>
+            <div class="loader">
+                <div></div>
+            </div>
+        </my-app>
+
     </body>
 </html>
