--- a/app/index.html
+++ b/app/index.html
@@ -65,9 +65,8 @@
                 </md-autocomplete>
                 
                 <md-input-container class="md-padding">
-                    <label>Geospatial</label>
-                    <md-select ng-model="user.state" class="md-whiteframe-1dp">
-                        <md-option ng-repeat="state in states" value="{{state.abbrev}}">{{state.abbrev}}</md-option>
+                    <md-select placeholder="Geospatial" ng-model="gis.data" class="md-whiteframe-1dp">
+                        <md-option ng-repeat="gisdata in geospatial" value="{{gisdata.data}}">{{gisdata.data}}</md-option>
                     </md-select>
                 </md-input-container>
 
