disasters feature, add markers

--- a/app/index.html
+++ b/app/index.html
@@ -90,10 +90,10 @@
                 </md-menu>
             </div>
         </md-toolbar>
-        <md-content layout="row" flex class="boxWithHeight" ng-controller="MapCtrl" style="position: relative; height: 100%">
-            <div flex="60" layout="column" class="map" id="map" style="position: relative; height: 100%" layout-fill></div>
+        <md-content layout="row" flex class="boxWithHeight" style="position: relative; height: 100%">
+            <div flex="60" layout="column" class="map" id="map" ng-controller="MapCtrl" style="position: relative; height: 100%" layout-fill></div>
                         
-            <div flex layout="column" class="boxWithHeight" style="position: relative; height: 100%" layout-fill>
+            <div flex layout="column" class="boxWithHeight" ng-controller="DisastersCtrl" style="position: relative; height: 100%" layout-fill>
                 <div ui-view></div>
             </div>
         </md-content>
@@ -111,5 +111,6 @@
         <!-- Your application bootstrap  -->
         <script type="text/javascript" src="app.js"></script>
         <script type="text/javascript" src="core/map/map.js"></script>
+        <script type="text/javascript" src="disaster/disasters.js"></script>
     </body>
 </html>
