make weather to be first router to be loaded

--- a/app/index.html
+++ b/app/index.html
@@ -93,7 +93,7 @@
         <md-content layout="row" flex class="boxWithHeight" style="position: relative; height: 100%">
             <div flex="60" layout="column" class="map" id="map" ng-controller="MapCtrl" style="position: relative; height: 100%" layout-fill></div>
                         
-            <div flex layout="column" class="boxWithHeight" ng-controller="DisastersCtrl" style="position: relative; height: 100%" layout-fill>
+            <div flex layout="column" class="boxWithHeight" style="position: relative; height: 100%" layout-fill>
                 <div ui-view></div>
             </div>
         </md-content>
