Added weather controller

--- a/app/index.html
+++ b/app/index.html
@@ -113,5 +113,6 @@
         <script type="text/javascript" src="app.js"></script>
         <script type="text/javascript" src="core/map/map.js"></script>
         <script type="text/javascript" src="disaster/disasters.js"></script>
+        <script type="text/javascript" src="weather/weather.js"></script>
     </body>
 </html>
