--- a/app/index.html
+++ b/app/index.html
@@ -13,6 +13,7 @@
         <link rel="stylesheet" type="text/css" href="bower_components/openlayers/ol.css">
         <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/icon?family=Material+Icons">
         <link rel="stylesheet" type="text/css" href="public/css/styles.css">
+        <link rel="stylesheet" type="text/css" href="font-awesome/css/font-awesome.min.css">
 
         <!-- Javascript -->
         <script type="text/javascript" src="bower_components/openlayers/ol.js"></script>
