Changed to leaflet from openlayers for easier clustering

--- a/app/index.html
+++ b/app/index.html
@@ -10,13 +10,13 @@
 
         <!-- Stylesheets -->
         <link rel="stylesheet" href="bower_components/angular-material/angular-material.min.css">
-        <link rel="stylesheet" type="text/css" href="bower_components/openlayers/ol.css">
-        <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/icon?family=Material+Icons">
+        <link rel="stylesheet" href="core/map/leaflet/leaflet.css"/>
+        <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/icon?family=Material+Icons">
         <link rel="stylesheet" type="text/css" href="public/css/styles.css">
         <link rel="stylesheet" type="text/css" href="font-awesome/css/font-awesome.min.css">
 
         <!-- Javascript -->
-        <script type="text/javascript" src="bower_components/openlayers/ol.js"></script>
+        <script type="text/javascript" src="core/map/leaflet/leaflet.js"></script>
     </head>
 
     <body ng-app="my-app" layout="column" ng-controller="AppCtrl as ctrl" style="position: relative; height: 100%">
