--- a/app/index.html
+++ b/app/index.html
@@ -17,6 +17,8 @@
         <link rel="stylesheet" type="text/css" href="font-awesome/css/font-awesome.min.css">
         <link rel="stylesheet" type="text/css" href="bower_components/leaflet.markercluster/dist/MarkerCluster.css">
         <link rel="stylesheet" type="text/css" href="bower_components/leaflet.markercluster/dist/MarkerCluster.Default.css">
+        <link rel="stylesheet" type="text/css" href="bower_components/weather-icons/css/weather-icons.min.css">
+        <link rel="stylesheet" type="text/css" href="bower_components/leaflet.weather-markers/dist/leaflet.weather-markers.css">
 
         <!-- Javascript -->
         <script type="text/javascript" src="core/map/leaflet/leaflet.js"></script>
@@ -113,6 +115,7 @@
          <!-- Angular Material Library -->
         <script type="text/javascript" src="bower_components/angular-material/angular-material.min.js"></script>
         <script type="text/javascript" src="bower_components/leaflet.markercluster/dist/leaflet.markercluster.js"></script>
+        <script type="text/javascript" src="bower_components/leaflet.weather-markers/dist/leaflet.weather-markers.min.js"></script>
 
         <!-- Your application bootstrap  -->
         <script type="text/javascript" src="app.js"></script>
