removed leaflet js from app code to bower

--- a/app/index.html
+++ b/app/index.html
@@ -9,8 +9,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <!-- Stylesheets -->
-        <link rel="stylesheet" href="bower_components/angular-material/angular-material.min.css">
-        <link rel="stylesheet" href="core/map/leaflet/leaflet.css"/>
+        <link rel="stylesheet" type="text/css" href="bower_components/angular-material/angular-material.min.css">
+        <link rel="stylesheet" type="text/css" href="bower_components/leaflet/dist/leaflet.css"/>
         <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/icon?family=Material+Icons">
         <link rel="stylesheet" type="text/css" href="public/css/styles.css">
         <link rel="stylesheet" type="text/css" href="owfont/css/owfont-regular.min.css">
@@ -21,7 +21,7 @@
         <link rel="stylesheet" type="text/css" href="bower_components/leaflet.weather-markers/dist/leaflet.weather-markers.css">
 
         <!-- Javascript -->
-        <script type="text/javascript" src="core/map/leaflet/leaflet.js"></script>
+        <script type="text/javascript" src="bower_components/leaflet/dist/leaflet.js"></script>
     </head>
 
     <body ng-app="my-app" layout="column" ng-controller="AppCtrl as ctrl" style="position: relative; height: 100%">
