--- a/app/index.html
+++ b/app/index.html
@@ -49,5 +49,6 @@
         <script type="text/javascript" src="core/map/map.js"></script>
         <script type="text/javascript" src="disaster/disasters.js"></script>
         <script type="text/javascript" src="weather/weather.js"></script>
+        <script type="text/javascript" src="home/index.js"></script>
     </body>
 </html>
