--- a/app/home/signup.html
+++ b/app/home/signup.html
@@ -1,8 +1,8 @@
-<md-dialog aria-label="LOGIN" style="width: 500px">
+<md-dialog aria-label="SIGN UP" style="width: 500px">
   <form ng-cloak>
     <md-toolbar>
       <div class="md-toolbar-tools">
-        <h2>LOGIN</h2>
+        <h2>SIGN UP</h2>
         <span flex></span>
         <md-button class="md-icon-button" ng-click="cancel()">
           <md-icon md-font-library="material-icons">close</md-icon>
@@ -11,6 +11,18 @@
     </md-toolbar>
 
     <md-dialog-content style="padding : 30px">
+      <md-input-container class="md-block">
+        <label>First name</label>
+        <md-icon md-font-library="material-icons">person</md-icon>
+        <input ng-model="user.firstname" type="text" ng-required="true">
+      </md-input-container>
+
+      <md-input-container class="md-block" flex-gt-xs="">
+        <label>Last name</label>
+        <md-icon md-font-library="material-icons">person</md-icon>
+        <input ng-model="user.lastname" type="text" ng-required="true">
+      </md-input-container>
+
       <md-input-container class="md-block">
         <label>Email</label>
         <md-icon md-font-library="material-icons">email</md-icon>
@@ -23,10 +35,19 @@
         <input ng-model="user.password" type="password" ng-required="true">
       </md-input-container>
 
+      <md-input-container class="md-block">
+        <label>Re-type password</label>
+        <md-icon md-font-library="material-icons">lock</md-icon>
+        <input ng-model="user.repassword" type="password" ng-required="true">
+      </md-input-container>
+
       <md-dialog-actions layout="row">
         <span flex></span>
         <md-button ng-click="answer('not useful')">
-          Login
+          Register
+        </md-button>
+        <md-button ng-click="answer('useful')">
+          Cancel
         </md-button>
       </md-dialog-actions>
     </md-dialog-content>
