lock routes when unautherised to use

--- a/app/home/signup.html
+++ b/app/home/signup.html
@@ -14,13 +14,13 @@
       <md-input-container class="md-block">
         <label>First name</label>
         <md-icon md-font-library="material-icons">person</md-icon>
-        <input ng-model="user.firstname" type="text" ng-required="true">
+        <input ng-model="user.first_name" type="text" ng-required="true">
       </md-input-container>
 
       <md-input-container class="md-block" flex-gt-xs="">
         <label>Last name</label>
         <md-icon md-font-library="material-icons">person</md-icon>
-        <input ng-model="user.lastname" type="text" ng-required="true">
+        <input ng-model="user.last_name" type="text" ng-required="true">
       </md-input-container>
 
       <md-input-container class="md-block">
