--- a/app/index.html
+++ b/app/index.html
@@ -38,6 +38,8 @@
         <script type="text/javascript" src="bower_components/angular-messages/angular-messages.min.js"></script>
         <script type="text/javascript" src="bower_components/angular-sanitize/angular-sanitize.min.js"></script>
         <script type="text/javascript" src="bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
+        <script type="text/javascript" src="bower_components/a0-angular-storage/dist/angular-storage.min.js"></script>
+        <script type="text/javascript" src="bower_components/angular-jwt/dist/angular-jwt.min.js"></script>
 
          <!-- Angular Material Library -->
         <script type="text/javascript" src="bower_components/angular-material/angular-material.min.js"></script>
