--- a/app/home/login.html
+++ b/app/home/login.html
@@ -25,7 +25,7 @@
 
       <md-dialog-actions layout="row">
         <span flex></span>
-        <md-button ng-click="answer('not useful')">
+        <md-button ng-click="login()">
           Login
         </md-button>
       </md-dialog-actions>
