--- a/app/main/app.html
+++ b/app/main/app.html
@@ -55,10 +55,10 @@
                     <md-icon md-font-library="material-icons">more_vert</md-icon>
                 </md-button>
                 <md-menu-content width="4" >
-                    <md-menu-item ng-repeat="item in [1, 2, 3]">
-                        <md-button ng-click="ctrl.announceClick($index)">
+                    <md-menu-item>
+                        <md-button ng-click="logout()">
                             <div layout="row" flex>
-                                <p flex>Option {{item}}</p>
+                                <p flex>Logout</p>
                             </div>
                         </md-button>
                     </md-menu-item>
