--- a/app/home/login.html
+++ b/app/home/login.html
@@ -1,5 +1,5 @@
 <md-dialog aria-label="LOGIN" style="width: 500px">
-  <form ng-cloak>
+  <form ng-cloak name="loginform" ng-submit="login()">
     <md-toolbar>
       <div class="md-toolbar-tools">
         <h2>LOGIN</h2>
@@ -14,21 +14,32 @@
       <md-input-container class="md-block">
         <label>Email</label>
         <md-icon md-font-library="material-icons">email</md-icon>
-        <input ng-model="user.email" type="email" ng-required="true">
+        <input ng-model="user.email" name="email" type="email" ng-required="true">
+        <div ng-messages="loginform.email.$error" role="alert">
+          <div ng-message="required">Please enter a value for this field.</div>
+          <div ng-message="email">This field must be a valid email address.</div>
+        </div>
       </md-input-container>
 
       <md-input-container class="md-block">
         <label>Password</label>
         <md-icon md-font-library="material-icons">lock</md-icon>
-        <input ng-model="user.password" type="password" ng-required="true">
+        <input ng-model="user.password" name="password" type="password" ng-required="true">
+        <div ng-messages="loginform.password.$error" role="alert">
+          <div ng-message="required">Please enter a value for this field.</div>
+        </div>
       </md-input-container>
 
       <md-dialog-actions layout="row">
         <span flex></span>
-        <md-button ng-click="login()">
+        <md-button type="submit">
           Login
         </md-button>
       </md-dialog-actions>
+
+      <div ng-messages="loginform.$error" role="alert">
+        <div ng-message="emailpassword">email or password incorrect</div>
+      </div>
     </md-dialog-content>
   </form>
 </md-dialog>
