--- a/app/main/app.html
+++ b/app/main/app.html
@@ -43,14 +43,14 @@
                 </md-item-template>
             </md-autocomplete>
 
-            <md-input-container class="md-padding">
+            <md-input-container class="md-padding myclass">
                 <md-select placeholder="pick geospatial" ng-model="gis.data" ng-change="selectChanged();" class="md-no-underline md-whiteframe-1dp">
                     <md-option ng-repeat="gisdata in geospatial" value="{{gisdata.data}}">{{gisdata.data}}</md-option>
                 </md-select>
             </md-input-container>
 
             <!-- PROFILE MENU-->
-            <md-menu md-position-mode="target-right target" >
+            <md-menu class="md-padding" md-position-mode="target-right target">
                 <div aria-label="Open demo menu" class="md-button" ng-click="$mdOpenMenu($event)">
                     <md-icon md-font-library="material-icons">account_circle</md-icon> {{payload.first_name}} {{payload.last_name}} <md-icon md-font-library="material-icons">keyboard_arrow_down</md-icon>
                 </div>
