--- a/app/disaster/earthquakes.html
+++ b/app/disaster/earthquakes.html
@@ -1,5 +1,5 @@
 <md-dialog aria-label="EARTHQUAKE" style="width: 500px">
-  <form ng-cloak name="earthquakesform" ng-submit="login()">
+  <form ng-cloak name="earthquakesform" ng-submit="saveEarthquakeFilter()">
     <md-toolbar>
       <div class="md-toolbar-tools">
         <h2>Filter quakes by</h2>
@@ -13,7 +13,7 @@
     <md-dialog-content style="padding : 30px">
       <md-input-container class="md-block">
         <label>Location</label>
-        <md-select ng-model="quake.location" ng-init="quake.location = 0">
+        <md-select ng-model="quake.location">
           <md-option ng-value="0">
             Worldwide
           </md-option>
@@ -30,7 +30,7 @@
       </md-input-container>
       <md-input-container class="md-block">
         <label>Date</label>
-        <md-select ng-model="quake.date" ng-init="quake.date = 2">
+        <md-select ng-model="quake.date">
           <md-option ng-value="0">
             Last hour
           </md-option>
@@ -50,7 +50,7 @@
       </md-input-container>
       <md-input-container class="md-block">
         <label>Magnitude</label>
-        <md-select ng-model="quake.magnitude" ng-init="quake.magnitude = 3.0">
+        <md-select ng-model="quake.magnitude">
           <md-option ng-value="1.0">
             1.0+
           </md-option>
