--- a/app/index.html
+++ b/app/index.html
@@ -45,6 +45,8 @@
         <script type="text/javascript" src="bower_components/angular-material/angular-material.min.js"></script>
         <script type="text/javascript" src="bower_components/leaflet.markercluster/dist/leaflet.markercluster.js"></script>
         <script type="text/javascript" src="bower_components/leaflet.weather-markers/dist/leaflet.weather-markers.min.js"></script>
+        <script type="text/javascript" src="bower_components/socket.io-client/socket.io.js"></script>
+        <script type="text/javascript" src="bower_components/angular-socket-io/socket.min.js"></script>
 
         <!-- Your application bootstrap  -->
         <script type="text/javascript" src="app.js"></script>
