--- a/app/index.html
+++ b/app/index.html
@@ -19,6 +19,7 @@
         <link rel="stylesheet" type="text/css" href="bower_components/leaflet.markercluster/dist/MarkerCluster.Default.css">
         <link rel="stylesheet" type="text/css" href="bower_components/weather-icons/css/weather-icons.min.css">
         <link rel="stylesheet" type="text/css" href="bower_components/leaflet.weather-markers/dist/leaflet.weather-markers.css">
+        <link rel="stylesheet" type="text/css" href="bower_components/angular-notification-icons/dist/angular-notification-icons.min.css">
 
         <!-- Javascript -->
         <script type="text/javascript" src="bower_components/leaflet/dist/leaflet.js"></script>
@@ -47,6 +48,7 @@
         <script type="text/javascript" src="bower_components/leaflet.weather-markers/dist/leaflet.weather-markers.min.js"></script>
         <script type="text/javascript" src="bower_components/socket.io-client/socket.io.js"></script>
         <script type="text/javascript" src="bower_components/angular-socket-io/socket.min.js"></script>
+        <script type="text/javascript" src="bower_components/angular-notification-icons/dist/angular-notification-icons.min.js"></script>
 
         <!-- Your application bootstrap  -->
         <script type="text/javascript" src="app.js"></script>
