--- a/app/main/app.html
+++ b/app/main/app.html
@@ -60,6 +60,13 @@
                 </div>
                 <md-menu-content width="4" >
                     <md-menu-item>
+                        <md-button ng-click="showChangeProfile($event)">
+                            <div layout="row" flex>
+                                <p flex>Change Password</p>
+                            </div>
+                        </md-button>
+                    </md-menu-item>
+                    <md-menu-item>
                         <md-button ng-click="logout()">
                             <div layout="row" flex>
                                 <p flex>Logout</p>
